--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,8 @@ version: "3.3"
    
 services:
   db:
-    image: mariadb
+    # image: mariadb
+    image: mysql:5.7
     ports:
       - '3306:3306'
     environment:
